# professionalhub

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  To-Think.md  Todo.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
IMPLEMENTATION/: index.html
PROJECT_CONTEXT/: index.html
docs/: IMPLEMENTATION.md  PROJECT_CONTEXT.md  index.md
docs/guides/: COMPILATION_GUIDE.md  OUTPUT_GUIDE.md
guides/COMPILATION_GUIDE/: index.html
guides/OUTPUT_GUIDE/: index.html
search/: search_index.json
